# uasl_image_acquisition

./: .gitignore  CMakeLists.txt  README.md  capture.cpp  image_acquisition.cbp  package.xml
examples/: example_bluefox.cpp  example_multiple_bluefox.cpp  example_single_bluefox.cpp  example_tau2.cpp  stereo_example.cpp
include/: acquisition.hpp  camera.hpp  cameraTau2.h  camera_mvbluefox.hpp  camera_mvbluefox_seq.hpp  camera_sequential.hpp  cond_var_package.hpp  configWindow.h  imu.hpp  multiple_camera_sync.hpp  trigger.hpp  util_clock.hpp  util_signal.hpp
include/uasl_image_acquisition/: acquisition.hpp  camera_mvbluefox.hpp  camera_sequential.hpp  camera_tau2.hpp  cond_var_package.hpp  configWindow.h  trigger.hpp  util_clock.hpp  util_signal.hpp
launch/: single_cam.launch
src/: acquisition.cpp  cameraTau2.cpp  camera_mvbluefox.cpp  camera_mvbluefox_seq.cpp  camera_tau2.cpp  configWindow.cpp  imu.cpp  multiple_cameras_sync.cpp  trigger.cpp
src/nodes/: single_camera_node.cpp
tau2_legacy_code/: image_acquisition.cbp
tau2_legacy_code/include/: cameraTau2.h  configWindow.h
tau2_legacy_code/src/: cameraTau2.cpp
test/: test_all_cameras_framerate.cpp  test_bluefox_framerate.cpp  test_bluefox_image_format.cpp  test_bluefox_seq.cpp  test_bluefox_single.cpp  test_tau2_framerate.cpp
trigger/: 95-ftdi-trigger.rules  trigger.ino
