<package>
  <name>image_acquisition</name>
  <version>1.0.0</version>
  <description>Image acquisition package</description>

  <maintainer email="h.r.courtois@cranfield.ac.uk">Hugo Courtois</maintainer>
  <maintainer email="a.beauvisage@cranfield.ac.uk">Axel Beauvisage</maintainer>
  
  <author>Hugo Courtois</author>
  <author>Axel Beauvisage</author>  
    
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  
  
  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
</package>
